5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1675_1949.log
== TEST (2019-05-01 18:14:18) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = (x / 10) - (x % 10)
x2 = x % 10
y1 = y / 10
y2 = y % 10
print(x1)
if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
	print("Ganhou: R$ 100.000.00")
	
-- ERROR:
File "XXXX", line 12
    print("Ganhou: R$ 100.000.00")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:14:37) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = (x / 10) - (x % 10)
x2 = x % 10
y1 = y / 10
y2 = y % 10
print(x1)
if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou: R$ 100.000.00")
	
-- OUTPUT:
0.5
Ganhou: R$ 100.000.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:15:27) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = (x / 10) - (x % 10)
x2 = x % 10
y1 = y / 10
y2 = y % 10
print(x1)
print(x2)
if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou: R$ 100.000.00")
	
-- OUTPUT:
0.5
5
Ganhou: R$ 100.000.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:16:36) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = (x  - (x % 10)) / 10
x2 = x % 10
y1 = y / 10
y2 = y % 10
print(x1)
print(x2)
if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou: R$ 100.000.00")
	
-- OUTPUT:
5.0
5
Ganhou: R$ 100.000.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:17:16) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = x //10
x2 = x % 10
y1 = y / 10
y2 = y % 10
print(x1)
print(x2)
if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou: R$ 100.000.00")
	
-- OUTPUT:
5
5
Ganhou: R$ 100.000.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:19:40) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = x //10
x2 = x % 10
y1 = y // 10
y2 = y % 10
print(x1)
print(x2)
if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou: R$ 100.000.00")
	elif(x1 == y1 and x1 == y2 and x2 == y1 and x2 == y2):
		print("Ganhou: R$ 50.000.00")
	
-- OUTPUT:
5
5
Ganhou: R$ 100.000.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:20:24) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = x //10
x2 = x % 10
y1 = y // 10
y2 = y % 10
print(x1)
print(x2)
if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou: R$ 100.000.00")
	elif(x1 == y1 and x1 == y2 and x2 == y1 and x2 == y2):
		print("Ganhou: R$ 50.000.00")
	
-- OUTPUT:
5
5
Ganhou: R$ 100.000.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:21:50) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = x //10
x2 = x % 10
y1 = y // 10
y2 = y % 10
print(x1)
print(x2)
if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou: R$ 100.000.00")
	elif((x1 + x2) == (y1 + y2)):
		print("Ganhou: R$ 50.000.00")
	
-- OUTPUT:
5
5
Ganhou: R$ 100.000.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:25:06) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = x //10
x2 = x % 10
y1 = y // 10
y2 = y % 10
print(x1)
print(x2)
if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou: R$ 100.000.00")
	elif((x1 + x2) == (y1 + y2)):
		print("Ganhou: R$ 50.000.00")
	elif(x1 == y1 or x1 == y2 or x2 == y1 or x2 == y2):
		print("Ganhou: R$ 1.000.00")
else:
	print("Perdeu")
	
-- OUTPUT:
5
5
Ganhou: R$ 100.000.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:25:41) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = x //10
x2 = x % 10
y1 = y // 10
y2 = y % 10

if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou: R$ 100.000.00")
	elif((x1 + x2) == (y1 + y2)):
		print("Ganhou: R$ 50.000.00")
	elif(x1 == y1 or x1 == y2 or x2 == y1 or x2 == y2):
		print("Ganhou: R$ 1.000.00")
else:
	print("Perdeu")
	
-- OUTPUT:
Ganhou: R$ 100.000.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:25:52) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = x //10
x2 = x % 10
y1 = y // 10
y2 = y % 10

if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou: R$ 100.000.00")
	elif((x1 + x2) == (y1 + y2)):
		print("Ganhou: R$ 50.000.00")
	elif(x1 == y1 or x1 == y2 or x2 == y1 or x2 == y2):
		print("Ganhou: R$ 1.000.00")
else:
	print("Perdeu")
	
-- EXECUTION TIME:
0.185461
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou: R$ 100.000.00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou: R$ 1.000.00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:26:32) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = x //10
x2 = x % 10
y1 = y // 10
y2 = y % 10

if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou: R$ 100.000.00")
	elif((x1 + x2) == (y1 + y2)):
		print("Ganhou: R$ 50.000.00")
	elif(x1 == y1 or x1 == y2 or x2 == y1 or x2 == y2):
		print("Ganhou: R$ 1.000.00")
	else:
		print("Perdeu")
else:
	print("Entradas invalidas")
	
-- EXECUTION TIME:
0.208107
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou: R$ 100.000.00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou: R$ 1.000.00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:26:35) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = x //10
x2 = x % 10
y1 = y // 10
y2 = y % 10

if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou: R$ 100.000.00")
	elif((x1 + x2) == (y1 + y2)):
		print("Ganhou: R$ 50.000.00")
	elif(x1 == y1 or x1 == y2 or x2 == y1 or x2 == y2):
		print("Ganhou: R$ 1.000.00")
	else:
		print("Perdeu")
else:
	print("Entradas invalidas")
	
-- OUTPUT:
Ganhou: R$ 100.000.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:26:39) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = x //10
x2 = x % 10
y1 = y // 10
y2 = y % 10

if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou: R$ 100.000.00")
	elif((x1 + x2) == (y1 + y2)):
		print("Ganhou: R$ 50.000.00")
	elif(x1 == y1 or x1 == y2 or x2 == y1 or x2 == y2):
		print("Ganhou: R$ 1.000.00")
	else:
		print("Perdeu")
else:
	print("Entradas invalidas")
	
-- EXECUTION TIME:
0.241666
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou: R$ 100.000.00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou: R$ 1.000.00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:27:25) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = x //10
x2 = x % 10
y1 = y // 10
y2 = y % 10

if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou R$ 100.000.00")
	elif((x1 + x2) == (y1 + y2)):
		print("Ganhou R$ 50.000.00")
	elif(x1 == y1 or x1 == y2 or x2 == y1 or x2 == y2):
		print("Ganhou R$ 1.000.00")
	else:
		print("Perdeu")
else:
	print("Entradas invalidas")
	
-- EXECUTION TIME:
0.139437
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000.00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000.00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:27:27) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = x //10
x2 = x % 10
y1 = y // 10
y2 = y % 10

if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou R$ 100.000.00")
	elif((x1 + x2) == (y1 + y2)):
		print("Ganhou R$ 50.000.00")
	elif(x1 == y1 or x1 == y2 or x2 == y1 or x2 == y2):
		print("Ganhou R$ 1.000.00")
	else:
		print("Perdeu")
else:
	print("Entradas invalidas")
	
-- EXECUTION TIME:
0.163554
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000.00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000.00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:27:27) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = x //10
x2 = x % 10
y1 = y // 10
y2 = y % 10

if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou R$ 100.000.00")
	elif((x1 + x2) == (y1 + y2)):
		print("Ganhou R$ 50.000.00")
	elif(x1 == y1 or x1 == y2 or x2 == y1 or x2 == y2):
		print("Ganhou R$ 1.000.00")
	else:
		print("Perdeu")
else:
	print("Entradas invalidas")
	
-- OUTPUT:
Ganhou R$ 100.000.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:27:45) 
-- CODE:
x = int(input("numero apostado:"))
y = int(input("numero sorteado:"))

#calculo dos numeros
x1 = x //10
x2 = x % 10
y1 = y // 10
y2 = y % 10

if(x >= 10 or x <= 99 or y >= 10 or y <= 99):
	if(x == y):
		print("Ganhou R$ 100.000,00")
	elif((x1 + x2) == (y1 + y2)):
		print("Ganhou R$ 50.000,00")
	elif(x1 == y1 or x1 == y2 or x2 == y1 or x2 == y2):
		print("Ganhou R$ 1.000,00")
	else:
		print("Perdeu")
else:
	print("Entradas invalidas")
	
-- EXECUTION TIME:
0.241839
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
